# mpicpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
mpicpp/: CMakeLists.txt  base.hpp  communicator.hpp  environment.hpp  error.hpp  file.hpp  info.hpp  logger.hpp  mpi.hpp  request.hpp  status.hpp  tools.hpp  types.hpp
test/: test.cpp
